Fix for specimen count not showing in published projects, improved keyword search in media list view

--- a/src/views/project/styles.css
+++ b/src/views/project/styles.css
@@ -64,8 +64,11 @@
 
 .list-group-item-name {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: baseline;
   flex-grow: 1;
+  flex-wrap: wrap;
+  gap: 4px;
 }
 
 .list-group-item-notes {
